--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@skeletonlabs/skeleton": "^2.10.0",
+		"@skeletonlabs/tw-plugin": "^0.4.0",
 		"jsonwebtoken": "^9.0.2"
 	}
 }
